# paradigmy4Assigment

./: .gitignore  CMakeLists.txt  ChecklistLine.h  Cipher.cpp  Cipher.h  ContactLine.h  Line.h  Text.cpp  Text.h  TextEditor.cpp  TextEditor.h  TextLine.h  main.cpp  Звіт_А4.docx
